# quadruped_hurricane2025_relocalization

./: .gitmodules  README.md
frame_republisher/: CMakeLists.txt  package.xml
frame_republisher/include/frame_republisher/: frame_republisher.hpp
frame_republisher/launch/: frame_republisher.launch.py
frame_republisher/src/: frame_republisher.cpp
pose_interface/: CMakeLists.txt  package.xml
pose_interface/include/pose_interface/: pose_interface.hpp
pose_interface/launch/: pose_interface.launch.py
pose_interface/src/: pose_interface.cpp
quadruped_lidar_relocalization_bringup/: CMakeLists.txt  package.xml
quadruped_lidar_relocalization_bringup/config/: quadruped_lidar_relocalization_params.yaml
quadruped_lidar_relocalization_bringup/launch/: quadruped_lidar_relocalization_bringup.launch.py
quadruped_lidar_relocalization_bringup/rviz/: quadruped_lidar_relocalization.rviz
quadruped_task_manager/: package.xml  setup.cfg  setup.py
quadruped_task_manager/launch/: quadruped_task_manager.launch.py
quadruped_task_manager/quadruped_task_manager/: quadruped_task_manager.py
quadruped_task_manager/quadruped_task_manager/utils/: quadruped_task_base.py
